# BoringHannover

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.web  LICENSE  README.md  TIMING_ACCURACY.md  docker-compose.yml  nginx.conf  page_content.html  pyproject.toml  scrape_movies.py
.github/workflows/: ci.yml  deploy.yml
docs/: CI_FIXES_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  SECURITY.md  SOURCES.md  architecture.md  extension-strategy.md  frontend-plan.md  local_testing.md  progress.md  technical_context.md
output/: latest_message.txt  schedule.json
src/boringhannover/: __init__.py  aggregator.py  config.py  constants.py  csv_exporters.py  event_time.py  exporters.py  formatting.py  genre.py  github_sync.py  main.py  models.py  notifier.py  output.py  sanitize.py  sources.toml
src/boringhannover/sources/: __init__.py  base.py
src/boringhannover/sources/cinema/: __init__.py  apollokino.py  astor.py
src/boringhannover/sources/concerts/: __init__.py  bei_chez_heinz.py  broncos.py  capitol.py  erhardt.py  faust.py  glocke.py  kulturpalast_linden.py  musikzentrum.py  pavillon.py  punkrock_konzerte.py  swiss_life_hall.py  weltspiele.py  zag_arena.py
src/kinoweek/: aggregator.py  config.py  exporters.py  github_sync.py  main.py  models.py  notifier.py  sanitize.py  scraper.py  sources.toml
src/kinoweek/sources/concerts/: erhardt.py  faust.py
tests/: test_event_time.py  test_genre.py  test_new_sources.py  test_notifier_serialization.py  test_scraper.py
tests/fixtures/: apollokino_detail.html  apollokino_omu.html
web/: .gitignore  astro.config.mjs  package.json  tailwind.config.mjs
web/output/: .gitkeep  web_events.json
web/public/: _headers  manifest.webmanifest  robots.txt
web/scripts/: generate-icons.mjs
web/src/components/: ConcertCard.astro  DateHeader.astro  EventDayGroup.astro  Footer.astro  Header.astro  MovieCard.astro  SectionHeader.astro  TimelineEvent.astro
web/src/data/: loader.ts  mock.ts  types.ts
web/src/layouts/: Base.astro
web/src/pages/: 404.astro  datenschutz.astro  impressum.astro  index.astro  sitemap.xml.ts
web/src/styles/: global.css
web/src/utils/: groupEvents.ts  sanitize.ts
