[project]
name = "boringhannover"
version = "0.1.0"
description = "Weekly event aggregator for Hannover - Movies, Culture, and Concerts"
authors = [{ name = "Sia" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
keywords = ["scraper", "telegram", "events", "movies", "hannover"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "ics>=0.7.2",
    "beautifulsoup4>=4.12.0",
    "nh3>=0.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.8.0",
    "ty>=0.0.1a10",
]

[project.urls]
Repository = "https://github.com/BabakBar/BoringHannover"

[project.scripts]
boringhannover = "boringhannover.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boringhannover"]

# =============================================================================
# Testing Configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

# =============================================================================
# Linting Configuration (Ruff)
# =============================================================================

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # Perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",     # Line too long (handled by formatter)
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "TRY003",   # Long exception message
    "EM101",    # Raw string in exception
    "EM102",    # f-string in exception
]
per-file-ignores = { "tests/*" = ["ARG001", "PLR2004", "S101"] }

[tool.ruff.lint.isort]
known-first-party = ["boringhannover"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =============================================================================
# Type Checking Configuration (ty)
# =============================================================================

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# ics and bs4 lack type stubs
unresolved-import = "ignore"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
