[project]
name = "boringhannover"
version = "1.1.0"
description = "Weekly event aggregator for Hannover - Movies, Culture, and Concerts"
authors = [{ name = "Sia" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
keywords = ["concerts", "events", "movies", "hannover"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "ics>=0.7.2",
    "beautifulsoup4>=4.12.0",
    "nh3>=0.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.8.0",
    "ty>=0.0.1a10",
]

[project.urls]
Repository = "https://github.com/BabakBar/BoringHannover"

[project.scripts]
boringhannover = "boringhannover.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boringhannover"]

# Testing Configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

# Linting Configuration (Ruff)
[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade - modern Python patterns
    "B",      # flake8-bugbear - catches real bugs
    "C4",     # flake8-comprehensions - better list/dict/set comprehensions
    "DTZ",    # flake8-datetimez - timezone awareness (critical for event dates!)
    "T10",    # flake8-debugger - no debugger statements
    "SIM",    # flake8-simplify - simplification suggestions
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",     # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["boringhannover"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# Type Checking Configuration (ty)
[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# ics and bs4 lack type stubs
unresolved-import = "ignore"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
